030-software/fluxcd/apps/swingmusic/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swingmusic
spec:
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: swingmusic
  template:
    metadata:
      labels:
        app: swingmusic
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: swingmusic
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: swingmusic
      containers:
        - name: swingmusic
          image: ghcr.io/swingmx/swingmusic:v3.0.0
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          args:
            - --port
            - "8080"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 64Mi
          volumeMounts:
            - name: temp
              mountPath: /tmp
            - name: data
              mountPath: /config
            - name: genji
              mountPath: /music
      volumes:
        - name: temp
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: genji
          nfs:
            server: genji.home.arpa
            path: /music/tracks
