030-software/fluxcd/apps/swingmusic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swingmusic
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: swingmusic
