030-software/fluxcd/apps/swingmusic/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: swingmusic
  annotations:
    dashboard.${domain}/icon: radio
    dashboard.${domain}/name: swingmusic
    dashboard.${domain}/url: https://swingmusic.${domain}
spec:
  hostnames:
  - swingmusic.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: swingmusic
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
